[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Battle_Main.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Player_Battle.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Baby_Battle.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Battle_Interface.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Battle_AttackUI.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Battle_Background.tscn" type="PackedScene" id=6]

[node name="Main" type="Node2D"]

position = Vector2( 3, 2.62109 )
script = ExtResource( 1 )

[node name="Player" parent="." index="0" instance=ExtResource( 2 )]

[node name="Baby" parent="." index="1" instance=ExtResource( 3 )]

position = Vector2( 175, 75 )

[node name="AttackTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 1.5
one_shot = true
autostart = false

[node name="PlayerTurnTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 3.0
one_shot = false
autostart = false

[node name="BabyTurn" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 3.0
one_shot = false
autostart = false

[node name="BabyAttackTimer" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = false

[node name="Interface" parent="." index="6" instance=ExtResource( 4 )]

margin_left = 2.0
margin_top = 3.0
margin_right = 42.0
margin_bottom = 43.0

[node name="Attack UI" parent="." index="7" instance=ExtResource( 5 )]

position = Vector2( 174.173, 128.694 )

[node name="CanvasLayer" parent="." index="8" instance=ExtResource( 6 )]

[node name="AnimationTimer" type="Timer" parent="." index="9"]

process_mode = 1
wait_time = 0.6
one_shot = false
autostart = false

[connection signal="health_changed" from="Player/Health" to="Interface" method="_on_Health_health_changed"]

[connection signal="BBY_health_changed" from="Baby/BabyHealth" to="Interface" method="_on_BabyHealth_BBY_health_changed"]

[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]

[connection signal="timeout" from="PlayerTurnTimer" to="." method="_on_PlayerTurnTimer_timeout"]

[connection signal="timeout" from="BabyTurn" to="." method="_on_BabyTurn_timeout"]

[connection signal="timeout" from="BabyAttackTimer" to="." method="_on_BabyAttackTimer_timeout"]

[connection signal="pressed" from="Attack UI/Button" to="." method="_on_Button_pressed"]

[connection signal="pressed" from="Attack UI/Button2" to="." method="_on_Button2_pressed"]

[connection signal="pressed" from="Attack UI/Button3" to="." method="_on_Button3_pressed"]

[connection signal="pressed" from="Attack UI/Button4" to="." method="_on_Button4_pressed"]

[connection signal="timeout" from="AnimationTimer" to="." method="_on_AnimationTimer_timeout"]


[editable path="Player"]
[editable path="Baby"]
[editable path="Attack UI"]
